--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 #header {
-height: 200px;    
+height: 200px;	
 background: url('header.jpg') repeat-x;
 }
 
@@ -12,12 +12,16 @@ background: url('header.jpg') repeat-x;
 height: 300px;
 background-color: #B0E0E6;
 border: 1px solid #999;
-font-size: 12pt;    
+font-size: 12pt;	
+}
+
+#content p {
+margin: 20px;	
 }
 
 #footer {
 height: 200px;
-background: url('footer.jpg') repeat-x;    
+background: url('footer.jpg') repeat-x;	
 text-align: center;
 font-size: 14pt;
 }
