--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 #header {
-height: 200px;	
-background: url('header.jpg') repeat-x;
+height: 200px;
+background-color: #B0E0E6;	
 }
 
 #content {
