--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
 
 #header {
 height: 200px;
-background-color: #B0E0E6;	
+background-color: rgb(255, 255, 255);	
 }
 
 #content {
 height: 300px;
-background-color: #B0E0E6;
-border: 1px solid #999;
+background-color: rgb(255, 255, 255);
+border: 1px solid rgb(255, 255, 255);
 font-size: 12pt;	
 }
 
