--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ height: 200px;
 text-align: center;
 font-size: 24pt;
 vertical-align: middle;
-background-color: rgba(206, 219, 224, 0.89);	
+background-color:hsla(50, 33%, 25%, .75);	
 }
 
 #content {
@@ -17,7 +17,7 @@ height: 400px;
 text-align: center;
 font-size: 12pt;
 vertical-align: middle;	
-background-color: rgba(206, 219, 224, 0.349);
+background-color: hsl(50, 33%, 25%);;
 }
 
 #footer {
@@ -25,5 +25,5 @@ height: 200px;
 text-align: center;
 font-size: 14pt;
 vertical-align: middle;
-background-color: rgb(206, 219, 224, 0.89);
+background-color: hsla(50, 33%, 25%, .75);
 }
