--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ background-color:hsl(0, 0%, 100%);
 }
 
 #content {
-height: 400px;
+height: 100%;
 text-align: center;
-font-size: 12pt;
+font-size: 100%;
 vertical-align: middle;	
 background-color: rgba(255, 255, 255, 0.75);
 }
