--- a/config.css
+++ b/config.css
@@ -1,6 +1,10 @@
 
    
-    
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
+
     #content {
-    background-color: rgba(33, 36, 228, 0.75);
+      background-color: rgba(255, 255, 255, 0.75);
     }
